--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -30,7 +30,7 @@ jobs:
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          git add scraper/malawi_news.json
+          git add public/malawi_news.json
           git commit -m "Update scraped data" || echo "No changes to commit"
           git push
         env:
