--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -4,7 +4,8 @@ on:
   schedule:
     - cron: '0 * * * *'  # every hour
   workflow_dispatch:      # manual run
-
+permissions:
+  contents: write
 jobs:
   run-scraper:
     runs-on: ubuntu-latest
