--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -2,7 +2,7 @@ name: Scraper Cron
 
 on:
   schedule:
-    - cron: '0 * * * *'  # every hour
+    - cron: 0 */6 * * *  # every hour
   workflow_dispatch:      # manual run
 permissions:
   contents: write
